Fix missing background reference

--- a/src/components/Background.module.css
+++ b/src/components/Background.module.css
@@ -16,13 +16,13 @@
 
 
 .Background {
-    background: url('/assets/main-background.jpg');
+    background: url('/assets/backgrounds/main-background.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
   }
-  
+
   .webamark {
     position: absolute;
     left: 0;
@@ -30,7 +30,7 @@
     width: 100vw;
     height: 100vh;
   }
-  
+
   .logo {
     position: absolute;
     left: 50%;
